ocp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline-demo
  labels:
    app: airline-demo
spec:
  selector:
    app: airline-demo
    type: app-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
